--- a/index.html
+++ b/index.html
@@ -19,9 +19,178 @@
         <div class="half-width">
             <img src="images/banner.png" alt="banner">
         </div>
+
+
+
+    </section>
+    <section class="container-pl">
+        <div class="players-profile">
+            <div class="players">
+                <div class="player">
+                    <img src="images/players/player-1.png" alt="">
+                    <h2>Neymar Jr</h2>
+                    <p>
+                        Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian
+                        professional footballer who plays as a forward for Ligue 1 club Paris.
+                    </p>
+                </div>
+            </div>
+            <div class="players">
+                <div class="player">
+                    <img src="images/players/player-2.png" alt="">
+                    <h2>Lionel Messi</h2>
+                    <p>
+                        Lionel Andrés Messi (Spanish pronunciation: [ljoˈnel anˈdɾes ˈmesi] ( About this sound listen);
+                        also known as Leo Messi.
+                    </p>
+                </div>
+            </div>
+            <div class="players">
+                <div class="player">
+                    <img src="images/players/player-3.png" alt="">
+                    <h2>Cristiano Ronaldo</h2>
+                    <p>
+                        Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays
+                        as a forward for Serie A club Juventus.
+                    </p>
+                </div>
+            </div>
+            <div class="players">
+                <div class="player">
+                    <img src="images/players/player-4.png" alt="">
+                    <h2>Paulo Dybala</h2>
+                    <p>
+                        Paulo Exequiel Dybala (born 15 November 1993) is an Argentine professional · Commonly referred
+                        to as
+                        "La Joya".
+
+                    </p>
+                </div>
+            </div>
+            <div class="players">
+                <div class="player">
+                    <img src="images/players/player-5.png" alt="">
+                    <h2>Kylian Mbappe</h2>
+                    <p>
+                        Kylian Mbappé Lottin (born 20 December 1998) is a French professional footballer who plays as a
+                        forward for Ligue 1 club Paris Saint-Germain.
+                    </p>
+                </div>
+            </div>
+            <div class="players">
+                <div class="player">
+                    <img src="images/players/player-6.png" alt="">
+                    <h2>Mesut Ozil</h2>
+                    <p>
+                        Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper
+                        Lig
+                        club Fenerbahçe.
+                    </p>
+                </div>
+            </div>
+            <div class="players">
+                <div class="player">
+                    <img src="images/players/player-7.png" alt="">
+                    <h2>Mauro Icardi</h2>
+                    <p>
+                        Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for Ligue 1
+                        club
+                        Paris Saint-Germain and the Argentina national team.
+                    </p>
+                </div>
+            </div>
+            <div class="players">
+                <div class="player">
+                    <img src="images/players/player-8.png" alt="">
+                    <h2>Di Maria</h2>
+                    <p>
+                        Ángel Fabián Di María is an Argentine professional footballer who plays for Ligue 1 club Paris
+                        Saint-Germain and the Argentina national team.
+                    </p>
+                </div>
+            </div>
+            <div class="players">
+                <div class="player">
+                    <img src="images/players/player-9.png" alt="">
+                    <h2>Mohammad Salah</h2>
+                    <p>
+                        Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward
+                        for
+                        Premier League club Liverpool and captains the Egypt national team.
+                    </p>
+                </div>
+            </div>
+            <div class="players">
+                <div class="player">
+                    <img src="images/players/player-10.png" alt="">
+                    <h2>Harry kane</h2>
+                    <p>
+                        Harry Edward Kane MBE is an English professional footballer who plays as a striker for Premier
+                        League club Tottenham Hotspur and captains the England national team.
+                    </p>
+                </div>
+            </div>
+            <div class="players">
+                <div class="player">
+                    <img src="images/players/player-11.png" alt="">
+                    <h2>Kevin De Bruyne</h2>
+                    <p>
+                        Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier
+                        League
+                        club Manchester City, where he is vice-captain, and the Belgium national team.
+                    </p>
+                </div>
+            </div>
+            <div class="players">
+                <div class="player">
+                    <img src="images/players/player-12.png" alt="">
+                    <h2>Phillippe Coutinho</h2>
+                    <p>
+                        Philippe Coutinho Correia is a Brazilian professional footballer who plays as an attacking
+                        midfielder or winger for Spanish club Barcelona and the Brazil national team.
+                    </p>
+                </div>
+            </div>
+
+
+        </div>
+    </section>
+    <section class="container-1">
+        <div class="last-sec">
+            <div class="third-sec">
+                <div id="text">
+                    <h3><b>Highlights Copa America 2021</b></h3>
+                    <p>
+                        these are the highlets of the matches. please enjoy the wasting of your valuable time.
+                    </p>
+                </div>
+                <button id="b2">Watch Live <i class="fas fa-chevron-right"></i> </button>
+            </div>
+            <div class="third-sec">
+                <img src="images/match.png" alt="">
+            </div>
+        </div>
     </section>
 
 
+    <footer class="container-foot">
+        <div class="sec-end">
+            <div>
+                <img src="images/logo.png" alt="">
+            </div>
+            <div class="foot-div">
+                <div>
+                    <img src="images/Social Icons/Instagram.png" alt="banner">
+                    <img src="images/Social Icons/Dribbble.png" alt="banner">
+                    <img src="images/Social Icons/Twitter.png" alt="banner">
+                    <img src="images/Social Icons/Youtube.png" alt="banner">
+                </div>
+                <div id="copy">
+                    Copyright<i class="fa-solid fa-copyright"></i> 2022 Football
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
