--- a/index.html
+++ b/index.html
@@ -23,6 +23,28 @@
 
 
     </section>
+    <section class="sched">
+        <div class="schedule">
+            <H5>time-1
+                <div class="time">6:00 am</div>
+            </H5>
+        </div>
+        <div class="schedule">
+            <H5>time-2
+                <div class="time">10:00 am</div>
+            </H5>
+        </div>
+        <div class="schedule">
+            <H5>time-3
+                <div class="time">03:00 pm</div>
+            </H5>
+        </div>
+        <div class="schedule">
+            <H5>time-4
+                <div class="time">08:00 pm</div>
+            </H5>
+        </div>
+    </section>
     <section class="container-pl">
         <div class="players-profile">
             <div class="players">
@@ -171,11 +193,45 @@
             </div>
         </div>
     </section>
-
+    <section class="container-rank">
+        <div class="rank">
+            <div class="half-class">
+                <h4 id="left-wing">World Ranking</h4>
+            </div>
+            <div class="half class">
+                <div class="countries">
+                    <div class="counrty">
+                        <img src="images/country/country-1.png" alt="">
+                        <h4 class="name">Name-1</h4>
+                    </div>
+                    <div class="counrty">
+                        <img src="images/country/country-2.png" alt="">
+                        <h4 class="name">Name-2</h4>
+                    </div>
+                    <div class="counrty">
+                        <img src="images/country/country-3.png">
+                        <h4 class="name">Name-3</h4>
+                    </div>
+                    <div class="counrty">
+                        <img src="images/country/country-4.png" alt="">
+                        <h4 class="name">Name-4</h4>
+                    </div>
+                    <div class="counrty">
+                        <img src="images/country/country-5.png" alt="">
+                        <h4 class="name">Name-5</h4>
+                    </div>
+                    <div class="counrty">
+                        <img src="images/country/country-6.png" alt="">
+                        <h4 class="name">Name-6</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <footer class="container-foot">
         <div class="sec-end">
-            <div>
+            <div class="foot-img">
                 <img src="images/logo.png" alt="">
             </div>
             <div class="foot-div">
@@ -186,7 +242,7 @@
                     <img src="images/Social Icons/Youtube.png" alt="banner">
                 </div>
                 <div id="copy">
-                    Copyright<i class="fa-solid fa-copyright"></i> 2022 Football
+                    Copyright<i class="far fa-copyright"></i> 2022 Football
                 </div>
             </div>
         </div>
